Add draft of generator

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots"
+    "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +22,7 @@
        "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +71,7 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +82,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create data frame that contains info about author book and words count in the book"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +170,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +200,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,8 +210,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save datafrane to csv file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,8 +226,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sort authors descending by their total words count in all books"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +301,7 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,32 +324,21 @@
        "5"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "num_of_authors_per_figure = 30\n",
-    "num_of_figures = len(df_sorted) // num_of_authors_per_figure + 1\n",
-    "num_of_figures"
+    "num_of_figures = len(df_sorted) // num_of_authors_per_figure + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\piotr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\plotly\\express\\_core.py:2065: FutureWarning:\n",
-      "\n",
-      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -40476,16 +40484,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\piotr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\plotly\\express\\_core.py:2065: FutureWarning:\n",
-      "\n",
-      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -60499,16 +60497,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\piotr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\plotly\\express\\_core.py:2065: FutureWarning:\n",
-      "\n",
-      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -73274,16 +73262,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\piotr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\plotly\\express\\_core.py:2065: FutureWarning:\n",
-      "\n",
-      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -77797,16 +77775,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\piotr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\plotly\\express\\_core.py:2065: FutureWarning:\n",
-      "\n",
-      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
-      "\n"
-     ]
     },
     {
      "data": {
