Add generator for LLMs

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook uses dataset, which source is annotated below. Author's total count is analyzed in the dimensions of total words count from the author's books. The goal is to give the insights on each of the author in order to select few of them for further analysis of Writing style of Generative AI."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install pandas\n",
+    "%pip install plotly # other libraries, indicated by the errors, would be installed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +39,7 @@
        "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +88,7 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +187,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +217,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +318,7 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,23 +332,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "1        George Alfred Henty\n",
+       "2           Anthony Trollope\n",
+       "3       Charlotte Mary Yonge\n",
+       "4            Charles Dickens\n",
+       "5             R M Ballantyne\n",
+       "6      James Fenimore Cooper\n",
+       "7     Robert Louis Stevenson\n",
+       "8       William Dean Howells\n",
+       "9        Henry Rider Haggard\n",
+       "10          Sir Walter Scott\n",
+       "Name: author, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_sorted[:10]['author']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "num_of_authors_per_figure = 30\n",
     "num_of_figures = len(df_sorted) // num_of_authors_per_figure + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plots representing number of total words count for each of the authors. Each following plot is the continuation of the previous one. Authors are displayed in the ascending order by total words count."
    ]
   },
   {
@@ -80446,6 +80489,21 @@
     "    fig = px.bar(df_part, x='author', y='words_count', color='book', barmode = 'stack').update_xaxes(categoryorder='total descending')\n",
     "    fig.update_layout(showlegend=False)\n",
     "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insights\n",
+    "\n",
+    "As the reference we can use \"Federalists Papers\" used at \"Inference in an authorship problem\" study of Frederick Mosteller and David L. Wallace. Analyzed text together accounts for around 180 000 words. \n",
+    "\n",
+    "Choose 10 authors to be analyzed:\n",
+    "- At least 200 000 total words count in the dataset\n",
+    "- Different writing genres\n",
+    "\n",
+    "For each author generate data using different LLMs."
    ]
   }
  ],
