--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "%pip install pandas\n",
     "%pip install plotly # other libraries, indicated by the errors, would be installed"
    ]
