Select 10 authors for analysis

--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -6,23 +6,23 @@
    "source": [
     "Notebook uses dataset, which source is annotated below. Author's total count is analyzed in the dimensions of total words count from the author's books. The goal is to give the insights on each of the author in order to select few of them for further analysis of Writing style of Generative AI.\n",
     "\n",
-    "Notebook assumes that `res/gutenberg_author_list` file containing author names from the dataset can be found. Moreover dataset in `res/books` can be found, where each book's file name follows such a format - `{author}__{title}.txt`."
+    "Notebook assumes that `res/books/gutenberg_author_list` file containing author names from the dataset can be found. Moreover dataset in `res/books/data` can be found, where each book's file name follows such a format - `{author}__{title}.txt`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "%pip install pandas\n",
-    "%pip install plotly # other libraries, indicated by the errors, would be installed"
+    "%pip install plotly # other libraries, indicated by the errors, would need to be installed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,18 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "res_dir = 'res/'\n",
-    "books_dir = f'{res_dir}books/'\n",
-    "authors_list_filepath = f'{res_dir}gutenberg_author_list'"
+    "all_books_dir = f'{res_dir}books/all/'\n",
+    "all_books_data_dir = f'{all_books_dir}/data/'\n",
+    "all_authors_list_filepath = f'{all_books_dir}/author_list'\n",
+    "all_books_csv_filepath = f'{all_books_dir}/books.csv'\n",
+    "\n",
+    "selected_books_dir = f'{res_dir}books/selected'\n",
+    "selected_authors_list_filepath = f'{selected_books_dir}/author_list'\n",
+    "selected_books_csv_filepath = f'{selected_books_dir}/books.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +97,13 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "authors = open(authors_list_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
+    "authors = open(all_authors_list_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
     "authors[:5]"
    ]
   },
@@ -110,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +196,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,9 +205,9 @@
     "df = pd.DataFrame(columns=['author', 'book', 'words_count'])\n",
     "\n",
     "for author_name in authors:\n",
-    "    author_book_files = [f for f in os.listdir(books_dir) if f.startswith(author_name)]\n",
+    "    author_book_files = [f for f in os.listdir(all_books_data_dir) if f.startswith(author_name)]\n",
     "    for book_files in author_book_files:\n",
-    "        with open(f'{books_dir}{book_files}', 'r', encoding='utf-8') as f:\n",
+    "        with open(f'{all_books_data_dir}{book_files}', 'r', encoding='utf-8') as f:\n",
     "            words_count = len(f.read().split())\n",
     "            book_name = book_files.removeprefix(f'{author_name}___').removesuffix('.txt')\n",
     "            df.loc[len(df)] = [author_name, book_name, words_count]\n",
@@ -211,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +226,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +239,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save datafrane to csv file"
+    "Save dataframe to csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f'{res_dir}gutenberg_books.csv', index=False)"
+    "df.to_csv(all_books_csv_filepath, index=False)"
    ]
   },
   {
@@ -254,7 +260,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df_grouped_by_author(df, skip_first_row=False):\n",
+    "    df_total_sorted = df.groupby('author')['words_count'].sum().sort_values(ascending=False).reset_index()\n",
+    "    # Remove the first row, because it's the sum of all words of all authors\n",
+    "    return df_total_sorted[1:] if skip_first_row else df_total_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -321,21 +339,19 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sorted = df.groupby('author')['words_count'].sum().sort_values(ascending=False).reset_index()\n",
-    "# Remove the first row, because it's the sum of all words of all authors\n",
-    "df_sorted = df_sorted[1:]\n",
-    "df_sorted.head()"
+    "df_total_sorted = get_df_grouped_by_author(df, skip_first_row=True)\n",
+    "df_total_sorted.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -354,23 +370,23 @@
        "Name: author, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sorted[:10]['author']"
+    "df_total_sorted[:10]['author']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_of_authors_per_figure = 30\n",
-    "num_of_figures = len(df_sorted) // num_of_authors_per_figure + 1"
+    "num_of_figures = len(df_total_sorted) // num_of_authors_per_figure + 1"
    ]
   },
   {
@@ -382,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -80488,7 +80504,7 @@
    ],
    "source": [
     "for i in range(num_of_figures):\n",
-    "    df_part = df[df['author'].isin(df_sorted['author'][i*num_of_authors_per_figure:(i+1)*num_of_authors_per_figure])]\n",
+    "    df_part = df[df['author'].isin(df_total_sorted['author'][i*num_of_authors_per_figure:(i+1)*num_of_authors_per_figure])]\n",
     "    fig = px.bar(df_part, x='author', y='words_count', color='book', barmode = 'stack').update_xaxes(categoryorder='total descending')\n",
     "    fig.update_layout(showlegend=False)\n",
     "    fig.show()"
@@ -80505,8 +80521,228 @@
     "Choose 10 authors to be analyzed:\n",
     "- At least 200 000 total words count in the dataset\n",
     "- Different writing genres\n",
+    "- Use one arbitrary writing type for each of the authors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors_10 = {\n",
+    "    \"Alexander Pope\": [                                     # Poetry\n",
+    "        \"The Poetical Works of Alexander Pope, Volume 1\",\n",
+    "        \"The Poetical Works of Alexander Pope, Volume 2\",\n",
+    "        \"The Rape of the Lock and Other Poems\"\n",
+    "    ],\n",
+    "    \"Alfred Russel Wallace\": [\"*\"],                         # Science\n",
+    "    \"Benjamin Franklin\": [\"*\"],                             # Autobiography\n",
+    "    \"Daniel Defoe\": [                                       # Adventure\n",
+    "        \"The Further Adventures of Robinson Crusoe\", \n",
+    "        \"The Life and Adventures of Robinson Crusoe\",\n",
+    "        \"The Life and Adventures of Robinson Crusoe (1808)\",\n",
+    "        \"The Life and Adventures of Robinson Crusoe Of York, Mariner, Vol. 1\",\n",
+    "        \"The Life and Most Surprising Adventures of Robinson Crusoe\"       \n",
+    "    ],                                  \n",
+    "    \"Joseph Conrad\": [\"*\"],                                 # Novels\n",
+    "    \"Lucy Maud Montgomery\": [                               # Children's Literature\n",
+    "        \"Anne Of Avonlea\",\n",
+    "        \"Anne Of Green Gables\",\n",
+    "        \"Anne Of The Island\",\n",
+    "        \"Anne's House of Dreams\",\n",
+    "    ],\n",
+    "    \"William Makepeace Thackeray\": [                        # Satire\n",
+    "        \"Vanity Fair\",\n",
+    "        \"The Book of Snobs\",\n",
+    "        \"Barry Lyndon\"\n",
+    "    ],\n",
+    "    \"Sir Winston Churchill\": [                              # History\n",
+    "        \"London to Ladysmith via Pretoria\",\n",
+    "        \"The River War\",\n",
+    "        \"The Story of the Malakand Field Force\"\n",
+    "    ],\n",
+    "    \"Oscar Wilde\": [                                        # Plays\n",
+    "        \"A Woman of No Importance\",\n",
+    "        \"An Ideal Husband\",\n",
+    "        \"La Sainte Courtisane\",\n",
+    "        \"Lady Windermere's Fan\",\n",
+    "        \"The Duchess of Padua\",\n",
+    "        \"The Importance of Being Earnest\",\n",
+    "        \"Vera\"\n",
+    "    ],\n",
+    "    \"Ralph Waldo Emerson\": [                                # Essays\n",
+    "        \"Essays, First Series\",\n",
+    "        \"Essays, Second Series\",\n",
+    "        \"Essays\"\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_books(df, authors_books):\n",
+    "    for author, books in authors_books.items():\n",
+    "        if books != [\"*\"]:\n",
+    "            df.drop(df[(df['author'] == author) & (~df['book'].isin(books))].index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\piotr\\AppData\\Local\\Temp\\ipykernel_11620\\374980536.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>words_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joseph Conrad</td>\n",
+       "      <td>2141653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Daniel Defoe</td>\n",
+       "      <td>699613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alfred Russel Wallace</td>\n",
+       "      <td>696576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>William Makepeace Thackeray</td>\n",
+       "      <td>492733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lucy Maud Montgomery</td>\n",
+       "      <td>350104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Benjamin Franklin</td>\n",
+       "      <td>307676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sir Winston Churchill</td>\n",
+       "      <td>298279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Alexander Pope</td>\n",
+       "      <td>255928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Ralph Waldo Emerson</td>\n",
+       "      <td>225434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Oscar Wilde</td>\n",
+       "      <td>144794</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        author  words_count\n",
+       "0                Joseph Conrad      2141653\n",
+       "1                 Daniel Defoe       699613\n",
+       "2        Alfred Russel Wallace       696576\n",
+       "3  William Makepeace Thackeray       492733\n",
+       "4         Lucy Maud Montgomery       350104\n",
+       "5            Benjamin Franklin       307676\n",
+       "6        Sir Winston Churchill       298279\n",
+       "7               Alexander Pope       255928\n",
+       "8          Ralph Waldo Emerson       225434\n",
+       "9                  Oscar Wilde       144794"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_10 = df[df['author'].isin(authors_10.keys())]\n",
+    "filter_books(df_10, authors_10)\n",
+    "df_10_total_sorted = get_df_grouped_by_author(df_10)\n",
+    "df_10_total_sorted.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To fit previously set contraints, above 10 authors has been chosen along with their books that will be analyzed. Exception has been made in the case of Oscar Wilde. As the we would like to have plays genre in the set, but don't have enough data for that, we included ~150 000 of words of Oscar Wilde written in play style.\n",
     "\n",
-    "For each author generate data using different LLMs."
+    "Data about selected authors is saved in `res/books/selected` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_authors = df_10_total_sorted['author'].tolist()\n",
+    "os.makedirs(selected_books_dir, exist_ok=True)\n",
+    "with open(selected_authors_list_filepath, 'w', encoding='utf-8') as f:\n",
+    "    f.write('\\n'.join(selected_authors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_10.to_csv(selected_books_csv_filepath, index=False)"
    ]
   }
  ],
