--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Notebook uses dataset, which source is annotated below. Author's total count is analyzed in the dimensions of total words count from the author's books. The goal is to give the insights on each of the author in order to select few of them for further analysis of Writing style of Generative AI.\n",
     "\n",
-    "Notebook assumes that `res/books/gutenberg_author_list` file containing author names from the dataset can be found. Moreover dataset in `res/books/data` can be found, where each book's file name follows such a format - `{author}__{title}.txt`."
+    "Notebook assumes that `res/books/author_list` file containing author names from the dataset can be found. Moreover dataset in `res/books/data` can be found, where each book's file name follows such a format - `{author}__{title}.txt`."
    ]
   },
   {
